# GaussianRenderer

./: CMakeLists.txt  CMakePresets.json  GaussianRenderer.cpp  GaussianRenderer.h  vcpkg_rf.txt
App/Debug/: App.exe.recipe  App.ilk  vc143.idb
App/Debug/App.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
App/Source/: App.cpp
Core/Debug/Core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Core.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Debug/: Core.idb  Core.lib
